# simpler-grants-pdf-builder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  NOFO.yml
.github/workflows/: django_ci.yml  django_gcp_deploy.yml  django_gcp_migrate.yml  django_migrate.yml  google-cloudrun-docker.yml  main.yml  old_django_ci.yml  old_django_gcp_deploy.yml  old_django_gcp_migrate.yml
bloom_nofos/: manage.py
bloom_nofos/bloom_nofos/: .env.example  asgi.py  aws.py  context_processors.py  forms.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
bloom_nofos/bloom_nofos/certs/: login-gov-public-key-dev.crt  login-gov-public-key-staging.crt  login-gov-public-local.crt
bloom_nofos/bloom_nofos/scripts/: server.py
bloom_nofos/bloom_nofos/static/: nofo_detail.css  shared.css  styles.css  theme-base.css  theme-landscape-cdc-blue.css  theme-landscape-cdc-white.css  theme-landscape-cdc.css  theme-opdiv-acf-blue.css  theme-opdiv-acf-white.css  theme-opdiv-acf.css  theme-opdiv-acl-white.css  theme-opdiv-acl.css  theme-opdiv-aspr-blue.css  theme-opdiv-aspr-white.css  theme-opdiv-aspr.css  theme-opdiv-cdc-blue.css  theme-opdiv-cdc-dhp.css  theme-opdiv-cdc-dop.css  theme-opdiv-cdc-iod.css  theme-opdiv-cdc-ncipc1.css  theme-opdiv-cdc-ncipc2.css  theme-opdiv-cdc-orr.css  theme-opdiv-cdc-white.css  theme-opdiv-cdc.css  theme-opdiv-cms-blue.css  theme-opdiv-cms-white.css  theme-opdiv-cms.css  theme-opdiv-hrsa-blue.css  theme-opdiv-hrsa-white.css  theme-opdiv-hrsa.css  theme-opdiv-ihs-white.css  theme-opdiv-ihs.css  theme-orientation-landscape.css  theme-orientation-portrait.css  theme-portrait-acf-blue.css  theme-portrait-acf.css  theme-portrait-hrsa-blue.css  theme-portrait-hrsa-white.css  theme-portrait-hrsa.css  usa.css
bloom_nofos/bloom_nofos/templates/: 400.html  404.html  500.html  base.html  base_barebones.html  docraptor_live_mode.html  docraptor_test_mode.html  index.html
bloom_nofos/documents/: admin.py  models.py  urls.py  views.py
bloom_nofos/documents/fixtures/: nofos.json
bloom_nofos/documents/migrations/: 0001_initial.py  0002_remove_overview_questions_and_more.py  0003_alter_overview_application_deadline_and_more.py  0004_document_shorttitle_overview_questions_and_more.py  0005_alter_document_shorttitle_and_more.py
bloom_nofos/guides/: admin.py  apps.py  forms.py  guide.py  mixins.py  models.py  test_views.py  urls.py  views.py
bloom_nofos/guides/migrations/: 0001_initial.py  (+16 more)
bloom_nofos/nofos/: admin.py  apps.py  audits.py  forms.py  middleware.py  mixins.py  models.py  nofo.py  nofo_compare.py  nofo_markdown.py  test_nofo.py  test_templatetags.py  test_utils.py  tests.py  urls.py  utils.py  views.py
bloom_nofos/odi_documents/: admin.py  apps.py  models.py  urls.py  views.py
bloom_nofos/posts/: _hrsa.md  admin.py  models.py  urls.py  views.py
bloom_nofos/scripts/: server.py  start_server.sh
bloom_nofos/users/: admin.py  backends.py  exports.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
documentation/: DECISIONS.md  GROUPS.md  README.md  UPDATING_PYTHON_DEPENDENCIES.md
documentation/adr/: 2023-12-07-pdf-generation-library.md  2025-07-23-html-diffing-library.md  2026-01-12-html-to-docx-solution.md  README.md  pdf-generation-library.md
nofos/: manage.py
nofos/bloom_nofos/: .env.example  asgi.py  aws.py  context_processors.py  error_helpers.py  forms.py  html_diff.py  logs.py  middleware.py  settings.py  tests.py  urls.py  utils.py  version.py  views.py
nofos/compare/: admin.py  apps.py  compare.py  forms.py  models.py  test_views.py  urls.py  utils.py  views.py
nofos/composer/: README.md  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
nofos/guides/: admin.py  forms.py  guide.py  models.py  test_utils.py  test_views.py  urls.py  utils.py  views.py
nofos/nofos/: admin.py  admin_audit.py  admin_resources.py  apps.py  audits.py  forms.py  import_transforms.py  middleware.py  mixins.py  models.py  nofo.py  nofo_compare.py  nofo_markdown.py  test_nofo.py  urls.py  utils.py  views.py
nofos/uploads/: tests.py  urls.py  utils.py  views.py
nofos/users/: admin.py  exports.py  forms.py  models.py  tests.py  urls.py  views.py
(+665 files in other folders)
