[tool.poetry]
name = "nofos"
version = "3.25.0"
description = "the no-code solo nofo web flow"
authors = ["Paul Craig <paul@pcraig.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.14"
django = "~6.0.2"
beautifulsoup4 = "^4.14.3"
markdownify = "1.2.2"
django-easy-audit = "^1.3.8"
psycopg2 = "^2.9.10"
django-environ = "^0.12.0"
gunicorn = "^25.0.3"
whitenoise = "^6.10.0"
python-slugify = "^8.0.1"
docraptor = "^3.1.0"
django-constance = "^4.3.4"
django-picklefield = "^3.4.0"
markdown = "3.10.2"
requests = "^2.32.5"
cssutils = "^2.9.0"
martor = "^1.7.16"
django-mirror = "^0.1.13"
mammoth = "^1.11.0"
tomli = "^2.4.0"
django-ninja = "1.5.3"
cryptography = "^46.0.5"
pyjwt = "^2.11.0"
google-cloud-secret-manager = "^2.25.0"
boto3 = "^1.42.47"
python-json-logger = "^4.0.0"
diff-match-patch = "^20241021"
pre-commit = "^4.5.0"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
freezegun = "^1.5.5"
isort = "^7.0.0"

[tool.poetry.scripts]
start = 'bloom_nofos.scripts.server:main'
collectstatic = 'bloom_nofos.scripts.server:collectstatic'
migrate = 'bloom_nofos.scripts.server:migrate'
db-migrate = 'bloom_nofos.scripts.server:migrate'
makemigrations = 'bloom_nofos.scripts.server:makemigrations'
test = 'bloom_nofos.scripts.server:test'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
