[tool.poetry]
name = "nofos"
version = "3.31.0"
description = "the no-code solo nofo web flow"
authors = ["Paul Craig <paul@pcraig.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.14"
django = "~6.0.4"
beautifulsoup4 = "^4.14.3"
markdownify = "1.2.2"
django-easy-audit = "^1.3.8"
psycopg2 = "^2.9.12"
django-environ = "^0.13.0"
gunicorn = "^25.3.0"
whitenoise = "^6.12.0"
python-slugify = "^8.0.1"
docraptor = "^3.1.0"
django-constance = "^4.3.5"
django-picklefield = "^3.4.0"
markdown = "3.10.2"
requests = "^2.33.1"
cssutils = "2.11.1"
martor = "^1.8.1"
django-mirror = "^0.1.13"
mammoth = "^1.12.0"
tomli = "^2.4.1"
django-ninja = "1.6.2"
cryptography = "^47.0.0"
pyjwt = "^2.12.1"
google-cloud-secret-manager = "^2.27.0"
boto3 = "^1.43.2"
python-json-logger = "^4.1.0"
diff-match-patch = "^20241021"
pre-commit = "^4.6.0"
grabzit = "^3.5.8"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
freezegun = "^1.5.5"
isort = "^8.0.1"

[tool.poetry.scripts]
start = 'bloom_nofos.scripts.server:main'
collectstatic = 'bloom_nofos.scripts.server:collectstatic'
migrate = 'bloom_nofos.scripts.server:migrate'
db-migrate = 'bloom_nofos.scripts.server:migrate'
makemigrations = 'bloom_nofos.scripts.server:makemigrations'
test = 'bloom_nofos.scripts.server:test'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
